--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,9 +5,11 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.mobile.android-logcat": "1.2.3",
     "com.unity.multiplayer.tools": "1.0.0",
     "com.unity.netcode.gameobjects": "1.0.2",
     "com.unity.services.lobby": "1.0.3",
+    "com.unity.services.relay": "1.0.4",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
