--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.mobile.android-logcat": "1.2.3",
     "com.unity.multiplayer.tools": "1.0.0",
     "com.unity.netcode.gameobjects": "1.0.2",
+    "com.unity.postprocessing": "3.1.1",
     "com.unity.services.lobby": "1.0.3",
     "com.unity.services.relay": "1.0.4",
     "com.unity.test-framework": "1.1.29",
