--- a/Assets/Scripts/Menu/Menu.asmdef
+++ b/Assets/Scripts/Menu/Menu.asmdef
@@ -8,7 +8,9 @@
         "GUID:4c3f49d89436d478ea78315c03159dcc",
         "GUID:03058786646e84a4587858e9302c3f41",
         "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:39e1f0990d2a2b0498217784aafd555f"
+        "GUID:39e1f0990d2a2b0498217784aafd555f",
+        "GUID:7015d87f64ae75145a08131752c69e0d",
+        "GUID:791d572d38ca62a49abdf684ed93f722"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
