--- a/Assets/Scripts/GameUI/GameUI.asmdef
+++ b/Assets/Scripts/GameUI/GameUI.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:6546d7765b4165b40850b3667f981c26"
+        "GUID:6546d7765b4165b40850b3667f981c26",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab",
+        "GUID:791d572d38ca62a49abdf684ed93f722"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
